--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@
 }
 
 body{
-  background-color: black;
+  background-color: rgb(0, 0, 0);
+  color:white;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
 }
 
