--- a/src/component/keyboardComponents/KeyboardCatalogue.module.css
+++ b/src/component/keyboardComponents/KeyboardCatalogue.module.css
@@ -1,10 +1,11 @@
 .container {
-  width: 80%;
-  margin: auto;
+  display: flex;
+  justify-content: center;
   margin-top: 1rem;
 }
 
 .productGridContainer {
+  width: 75%;
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
