--- a/src/UI/MainNavigation.module.css
+++ b/src/UI/MainNavigation.module.css
@@ -1,20 +1,18 @@
 .navbar {
   position: sticky;
-  top: 0;
+  top: 0%;
   left: 50%;
   transform: translateX(-50%, -50%);
   justify-content: space-between;
   font-family: "Titillium Web", sans-serif;
   display: flex;
   padding: 1rem;
-  margin: 1rem;
-  border-radius: 2rem;
   z-index: 10;
   transition: 0.8s all;
 }
 
 .active {
-  background-color: rgba(35, 35, 35, 0.9);
+  background-color: rgba(35, 35, 35, 0.5);
 }
 
 .logo {
