--- a/src/component/homeComponents/HeroSection.module.css
+++ b/src/component/homeComponents/HeroSection.module.css
@@ -1,36 +1,85 @@
 .hero_container {
-  display: grid;
-  place-items: center;
-  place-content: center;
-  text-align: center;
-  height: 100vh;
-  margin-bottom:2rem;
+  border-radius: 0 0 2rem 2rem;
+  background: linear-gradient(black, transparent),
+    linear-gradient(to bottom, #0c001f, #7722ff, #f3b7ff);
+  background-blend-mode: multiply;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  height: 91vh;
+  margin-bottom: 2rem;
 }
 
 .hero_title {
-  color:rgb(215, 215, 215);
-  text-transform: uppercase;
-  font-size: 5rem;
-  font-family: "Oswald", sans-serif;
+  position: relative;
+  top: 15%;
+  left: 10%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 350;
+  font-size: 4rem;
+  width: 50%;
+  animation: slideAndFade 1s ease-in-out;
+}
+
+.imageContainer {
+  position: relative;
+  top: 5%;
+  left: 35%;
+  width: 60%;
+  height: 60%;
+  animation: moveImageContainer 8s ease-in-out infinite;
+}
+
+.imageContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.buttonContainer {
+  position: absolute;
+  top: 60%;
+  left: 15%;
+}
+
+.buttonContainer a {
+  text-decoration: none;
+}
+
+.exploreButton {
+  display: flex;
+  place-content: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+  font-size: 1.2rem;
+  padding: 0.8rem 1.5rem;
   border: none;
-  outline: none;
-  margin-bottom: 3rem;
+  border-radius: 0.5rem;
 }
 
-.titleKey {
-  font-size: 8rem;
-  color: #ffa6db;
-  animation: enlargeKey 800ms ease-in-out;
+.exploreButton:hover {
+  cursor: pointer;
+  width: 110%;
 }
 
-@keyframes enlargeKey {
+@keyframes slideAndFade {
   0% {
-    font-size: 2rem;
-  }
-  50% {
-    font-size: 8rem;
+    opacity: 0;
+    transform: translateY(-100%);
   }
   100% {
-    font-size: 8rem;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes moveImageContainer {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(5%);
+  }
+  100% {
+    transform: translatey(0);
   }
 }
