--- a/src/component/homeComponents/LatestProducts.module.css
+++ b/src/component/homeComponents/LatestProducts.module.css
@@ -1,13 +1,21 @@
 .title {
-  font-family: "Oswald", sans-serif;
-  text-transform: uppercase;
+  font-family: 'Inter', sans-serif;
   display: grid;
   place-content: center;
-  font-size: 2.5rem;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  font-size: 2rem;
+  color: rgb(243, 220, 255);
+}
+
+.titleSpan {
+  background: #772acc;
+  background: linear-gradient(180deg, #772acc, #d1a9e8);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .latest-product-container {
+  border-radius: 0.5rem;
   opacity: 0;
   transition: 3s all;
   font-family: "Titillium Web", sans-serif;
@@ -15,7 +23,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 2.5rem;
+  margin: 1.5rem;
 }
 
 .show {
@@ -23,24 +31,28 @@
 }
 
 .productGrid {
-  width: 18rem;
+  text-decoration: none;
+  width: 16rem;
   height: 25rem;
-  margin: 0.75rem;
-  border-radius: 1.5rem;
+  margin: 0.25rem;
+  border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   background-color: rgb(19, 19, 19);
-  overflow: hidden;
-  animation: shadowColorChange 7.5s infinite linear;
+  transition: transform 0.3s ease;
+}
+
+.productGrid:hover {
+  transform: scale(1.1);
 }
 
 .productName {
+  color: rgb(243, 220, 255);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   font-size: 1.25rem;
   font-weight: lighter;
   height: 20%;
   padding: 1.5rem;
-  color: white;
 }
 
 .productDesc {
@@ -66,20 +78,11 @@
   object-fit: cover;
 }
 
-@keyframes shadowColorChange {
-  0% {
-    box-shadow: 0px 0px 1px 0px #ff5f6d;
-  }
-  25% {
-    box-shadow: 0px 0px 5px 0px #04c2c9;
-  }
-  50% {
-    box-shadow: 0px 0px 10px 0px #ffbc00;
-  }
-  75% {
-    box-shadow: 0px 0px 5px 0px #04c2c9;
-  }
-  100% {
-    box-shadow: 0px 0px 1px 0px #ff5f6d;
-  }
+.new {
+  position: absolute;
+  font-size: 1rem;
+  padding: 0 1rem 0 1rem;
+  background-color: aquamarine;
+  color: black;
+  border-radius: 1.5rem;
 }
