--- a/src/component/keyboardComponents/KeyboardCatalogue.module.css
+++ b/src/component/keyboardComponents/KeyboardCatalogue.module.css
@@ -1,76 +1,41 @@
 .container {
   display: flex;
-  justify-content: center;
-  margin-top: 1rem;
+  justify-items: center;
 }
 
 .productGridContainer {
-  width: 75%;
+  width: 85%;
+  margin-top: 1rem;
+  justify-content: center;
   display: inline-flex;
   flex-wrap: wrap;
-  justify-content: center;
+  place-items: center;
 }
 
 .productGrid {
   font-family: "Titillium Web", sans-serif;
   width: 18rem;
-  height: 24.5rem;
   margin: 0.75rem;
+  height: 25rem;
   display: flex;
   flex-direction: column;
-  background-color: rgb(19, 19, 19);
+  background-color: #222;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
-  animation: shadowColorChange 7.5s infinite linear;
-}
-
-.link {
-  height: 20rem;
-  text-decoration: none;
+  color: #fff;
+  transition: transform 0.3s;
 }
 
 .productGrid:hover {
-  transform: translateY(-5px);
+  transform: scale(1.1);
 }
 
-.productGrid:hover .product-image-container img {
-  transform: scale(1.15);
-}
-
-.productGrid:hover .buttonsContainer {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.productName {
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  font-size: 1.25rem;
-  font-weight: lighter;
-  height: 20%;
-  padding: 1.5rem;
-  color: white;
-}
-
-.productDesc {
-  padding: 1.5rem;
-  font-size: 0.75rem;
-  font-weight: lighter;
-  color: rgb(163, 163, 163);
-  height: 25%;
-}
-
-.productPrice {
-  font-size: 1rem;
-  font-weight: bold;
-  color: #00ff0d;
-  padding: 0rem 1.5rem;
+.link {
+  text-decoration: none;
+  height: 80%;
 }
 
 .product-image-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: black;
+  background-color: #000;
   width: 100%;
   height: 50%;
   overflow: hidden;
@@ -78,14 +43,39 @@
 
 .product-image-container img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
+.productName {
+  height: 20%;
+  font-size: 1rem;
+  padding: 1rem;
+  color: #eee;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: all 0.3s;
+}
+
+.productDesc {
+  height: 20%;
+  font-size: 0.9rem;
+  padding: 1rem;
+  color: #ccc;
+  transition: all 0.3s;
+}
+
+.productPrice {
+  font-weight: bold;
+  padding: 1rem;
+  color: #f9c62d;
+  font-size: 1.2rem;
+  transition: all 0.3s;
+}
+
 .buttonsContainer {
-  margin-top: 0.25rem;
   display: flex;
+  align-items: center;
   justify-content: center;
-  opacity: 0;
-  transform: translateY(10px);
-  transition: opacity 0.3s ease, transform 0.3s ease;
+  padding: 1rem;
 }
