--- a/src/component/filterComponents/PriceOption.module.css
+++ b/src/component/filterComponents/PriceOption.module.css
@@ -26,3 +26,10 @@
   cursor: pointer;
   color: #f9c62d;
 }
+
+
+@media screen and (max-width: 600px) {
+  .priceButton:hover {
+    padding: 0.15rem;
+  }
+}
