--- a/src/UI/MainNavigation.module.css
+++ b/src/UI/MainNavigation.module.css
@@ -4,6 +4,7 @@
   left: 50%;
   transform: translateX(-50%, -50%);
   justify-content: space-between;
+  align-items: center;
   font-family: "Titillium Web", sans-serif;
   display: flex;
   padding: 1rem;
@@ -26,10 +27,15 @@
 .navbar_links {
   display: flex;
   place-items: center;
+  align-items: center;
   justify-content: space-between;
-  width: 40rem;
+  width: 60vw;
   margin-right: 3.5rem;
   list-style-type: none;
+}
+
+.icon {
+  display: none;
 }
 
 .navbar_links a {
@@ -37,7 +43,7 @@
   text-decoration: none;
 }
 
-.cart{
+.cart {
   position: relative;
 }
 
@@ -54,4 +60,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar_links {
+    position: absolute;
+    padding: 3rem 8rem 3rem 8rem;
+    border-radius: 1.2rem;
+    top: 5rem;
+    left: 50%;
+    transform: translate(-50%);
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(4px);
+    flex-direction: column;
+    height: 50vh;
+    display: none;
+  }
+
+  .show{
+    display: flex;
+  }
+
+  .icon{
+    display: block;
+  }
+
 }
