--- a/src/UI/ProductButton.module.css
+++ b/src/UI/ProductButton.module.css
@@ -17,7 +17,7 @@
 }
 
 .buyNowButton:hover {
-  background-color: #00ba09;
+  background-color: #00cf0a;
 }
 
 .addToCartButton:hover {
@@ -37,7 +37,7 @@
   transform: translateY(-50%);
   width: 100%;
   height: 100%;
-  background-color: #00ba09;
+  background-color: #00cf0a;
   color: white;
   display: flex;
   align-items: center;
@@ -51,5 +51,24 @@
   }
   100% {
     left: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .addToCartButton,
+  .buyNowButton {
+    background-color: white;
+    color: black;
+    border-radius: 0.25rem;
+  }
+
+  .buyNowButton:hover {
+    background-color: white;
+    color: black;
+  }
+
+  .addToCartButton:hover {
+    background-color: white;
+    color: black;
   }
 }
