--- a/src/component/checkoutComponent/ConfirmCheckout.module.css
+++ b/src/component/checkoutComponent/ConfirmCheckout.module.css
@@ -19,7 +19,6 @@
 .checkoutButton {
   text-transform: uppercase;
   font-family: "Titillium Web", sans-serif;
-  font-weight: 800;
   font-size: 0.75rem;
   background-color: #00cf0a;
   padding-left: 1.5rem;
@@ -44,4 +43,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+@media screen and (max-width:600px) {
+  .toCheckOutHeader{
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
 }
