--- a/src/component/filterComponents/Filter.module.css
+++ b/src/component/filterComponents/Filter.module.css
@@ -2,18 +2,25 @@
   font-family: "Montserrat", sans-serif;
   margin-top: 1.75rem;
   width: 18rem;
+  height: 90vh;
   background-color: #222;
   color: #fff;
   padding: 1.5rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-  flex-shrink: 0;
 }
 
 .options {
-  position: sticky;
-  top: 10%;
   border: none;
   padding: 0;
+  font-size: 0.875rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: #ccc;
+}
+
+.mobileFilter {
+  display: none;
 }
 
 .optionGroup {
@@ -45,10 +52,47 @@
   text-decoration: underline;
 }
 
-.options {
-  font-size: 0.875rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  color: #ccc;
+@media screen and (max-width: 600px) {
+  .filterContainer {
+    width: 100%;
+    height: 3rem;
+    display: grid;
+    align-items: center;
+    padding: 0;
+  }
+
+  .mobileFilter {
+    display: inline;
+    border: none;
+    background-color: transparent;
+    color: white;
+    display: grid;
+  }
+
+  .options {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .optionGroup {
+    width: 10rem;
+    margin: 0;
+  }
+
+  .optionHeader {
+    position: relative;
+    align-items: center;
+    display: flex;
+    margin-bottom: 0;
+    width: 8.5rem;
+  }
+
+  .filters {
+    margin-top: 1rem;
+    margin-left: 3.25%;
+    position: absolute;
+    padding: 1rem;
+    border-radius: 0.25rem;
+    background-color: #222;
+  }
 }
