--- a/src/component/filterComponents/ModelOption.module.css
+++ b/src/component/filterComponents/ModelOption.module.css
@@ -27,3 +27,9 @@
   cursor: pointer;
   color: #f9c62d;
 }
+
+@media screen and (max-width: 600px) {
+  .modelButton:hover {
+    padding: 0.15rem;
+  }
+}
