--- a/src/component/homeComponents/HeroSection.module.css
+++ b/src/component/homeComponents/HeroSection.module.css
@@ -3,42 +3,36 @@
   background: linear-gradient(black, transparent),
     linear-gradient(to bottom, #0c001f, #7722ff, #f3b7ff);
   background-blend-mode: multiply;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  height: 91vh;
+  height: 25rem;
   margin-bottom: 2rem;
 }
 
 .hero_title {
-  position: relative;
-  top: 15%;
-  left: 10%;
+  margin: 1.5rem;
   font-family: "Roboto", sans-serif;
   font-weight: 350;
-  font-size: 4rem;
-  width: 50%;
+  font-size: 2rem;
+  text-align: center;
   animation: slideAndFade 1s ease-in-out;
 }
 
 .imageContainer {
-  position: relative;
-  top: 5%;
-  left: 35%;
-  width: 60%;
-  height: 60%;
+  margin: auto;
+  width: 60vw;
   animation: moveImageContainer 8s ease-in-out infinite;
 }
 
 .imageContainer img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .buttonContainer {
   position: absolute;
-  top: 60%;
-  left: 15%;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .buttonContainer a {
@@ -54,11 +48,6 @@
   padding: 0.8rem 1.5rem;
   border: none;
   border-radius: 0.5rem;
-}
-
-.exploreButton:hover {
-  cursor: pointer;
-  width: 110%;
 }
 
 @keyframes slideAndFade {
@@ -81,5 +70,43 @@
   }
   100% {
     transform: translatey(0);
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  .hero_container {
+    height: 91vh;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  .hero_title {
+    position: relative;
+    text-align: left;
+    margin: 0;
+    top: 10%;
+    left: 10%;
+    font-size: 4rem;
+    width: 50%;
+  }
+
+  .imageContainer {
+    margin: 0;
+    position: relative;
+    top: 5%;
+    left: 35%;
+    height: 60%;
+    animation: moveImageContainer 8s ease-in-out infinite;
+  }
+
+  .buttonContainer {
+    position: absolute;
+    top: 60%;
+    left: 15%;
+    transform: none;
+  }
+
+  .exploreButton:hover {
+    width: 110%;
   }
 }
