--- a/src/component/homeComponents/TrustedSection.module.css
+++ b/src/component/homeComponents/TrustedSection.module.css
@@ -1,19 +1,20 @@
 .container {
-  display: grid;
-  place-items: center;
+  margin: auto;
+  width: 60vw;
   height: 15rem;
-  margin: 5rem;
 }
 
 .title {
+  margin: 1.5rem;
   text-align: center;
   font-family: "Inter", sans-serif;
   font-size: 1.5rem;
   color: rgb(243, 220, 255);
 }
 
-.logoContainer{
-  width: 50%;
+.logoContainer {
+  width: 50vw;
+  margin: auto;
 }
 
 .imageList {
@@ -33,5 +34,5 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter:brightness(0) invert(1);
+  filter: brightness(0) invert(1);
 }
