--- a/src/component/keyboardComponents/KeyboardCatalogue.module.css
+++ b/src/component/keyboardComponents/KeyboardCatalogue.module.css
@@ -3,6 +3,13 @@
   justify-items: center;
 }
 
+.filter {
+  z-index: 1;
+  position: sticky;
+  top: 5%;
+  height: 100%;
+}
+
 .productGridContainer {
   width: 85%;
   margin-top: 1rem;
@@ -15,11 +22,11 @@
 .productGrid {
   font-family: "Titillium Web", sans-serif;
   width: 18rem;
-  margin: 0.75rem;
   height: 25rem;
+  margin: 0.75rem;
   display: flex;
   flex-direction: column;
-  background-color: #222;
+  border: 0.1px orange solid;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   color: #fff;
   transition: transform 0.3s;
@@ -66,6 +73,7 @@
 }
 
 .productPrice {
+  height: auto;
   font-weight: bold;
   padding: 1rem;
   color: #f9c62d;
@@ -78,4 +86,51 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .filter {
+    position: sticky;
+  }
+
+  .productGridContainer {
+    width: 100%;
+  }
+
+  .productGrid {
+    border: none;
+    width: 28rem;
+    height: 33rem;
+    margin: 0.5rem;
+  }
+
+  .productGrid:hover {
+    transform: none;
+  }
+  .product-image-container {
+    height: 60%;
+    border-radius: 1.25rem;
+  }
+
+  .productName {
+    height: 15%;
+    font-size: 1.1rem;
+  }
+
+  .productDesc {
+    font-size: 0.9rem;
+    height: 15%;
+  }
+
+  .productPrice {
+    height: 5%;
+  }
+
+  .buttonsContainer {
+    height: auto;
+  }
 }
